--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "tavern-server",
+  "name": "jakes-tavern",
   "version": "1.0.0",
-  "description": "Server for Jake's Game",
+  "description": "Multiplayer Dice Game Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
     "socket.io": "^4.7.2"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
